--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.password=Luisa9214*
 
 #SQL.
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.database=mysql
